--- a/App.Web/Views/Shared/_Header.cshtml
+++ b/App.Web/Views/Shared/_Header.cshtml
@@ -17,8 +17,8 @@
                     </ul>
                 </li>
                 <li><a href="portfolio.html">Galeri</a></li>
-                <li><a href="blog.html">Etkinlikler</a></li>
-                <li><a href="contact.html">İletişim</a></li>
+                <li><a href="/Event/Index/">Etkinlikler</a></li>
+                <li><a href="/Contact/Index/">İletişim</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
