--- a/App.Web/Views/Shared/ModeratorLayout.cshtml
+++ b/App.Web/Views/Shared/ModeratorLayout.cshtml
@@ -55,18 +55,18 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-mod">
         <div class="container">
-            <a class="navbar-brand text-white" href="#">Mod Panel</a>
+            <a class="navbar-brand text-white" href="/Moderator/ModeratorEvent/Index/">Mod Panel</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#modNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="modNavbar">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="/Moderator/Event">Etkinlikler</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Moderator/ModeratorEvent/">Etkinlikler</a></li>
                     <li class="nav-item"><a class="nav-link" href="/Moderator/Comment">Yorumlar</a></li>
                     <li class="nav-item"><a class="nav-link" href="/Moderator/Team">Takım</a></li>
                     <li class="nav-item"><a class="nav-link" href="/Moderator/Role">Roller</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/">Siteye Git</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/MainPage/Index/">Siteye Git</a></li>
                 </ul>
             </div>
         </div>
