--- a/App.Web/Views/Shared/_Header.cshtml
+++ b/App.Web/Views/Shared/_Header.cshtml
@@ -16,7 +16,7 @@
                         <li><a href="/TeamUsers/Index/">Biz Kimiz</a></li>
                     </ul>
                 </li>
-                <li><a href="portfolio.html">Galeri</a></li>
+                <li><a href="/Galery/Gallery/">Galeri</a></li>
                 <li><a href="/Event/Index/">Etkinlikler</a></li>
                 <li><a href="/Contact/Index/">İletişim</a></li>
             </ul>
