--- a/App.Web/Views/Event/Index.cshtml
+++ b/App.Web/Views/Event/Index.cshtml
@@ -20,7 +20,7 @@
                 <div class="col-lg-4 col-md-6">
                     <article class="position-relative h-100">
                         <div class="post-img position-relative overflow-hidden">
-                            <img src="@item.EventImageUrl" class="img-fluid" alt="@item.EventTitle">
+                            <img src="@item.EventImageUrl" class="img-fluid rounded" style="max-height: 300px; object-fit: cover;" />
                             <span class="post-date">@item.Date.ToString("dd MMMM yyyy")</span>
                         </div>
 
