--- a/App.Web/Views/Shared/ModeratorLayout.cshtml
+++ b/App.Web/Views/Shared/ModeratorLayout.cshtml
@@ -63,9 +63,8 @@
             <div class="collapse navbar-collapse" id="modNavbar">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="/Moderator/ModeratorEvent/">Etkinlikler</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/Moderator/Comment">Yorumlar</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/Moderator/Team">Takım</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/Moderator/Role">Roller</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Moderator/ModeratorComment/GetAllComments/">Yorumlar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Moderator/ModeratorRole/">Roller</a></li>
                     <li class="nav-item"><a class="nav-link" href="/MainPage/Index/">Siteye Git</a></li>
                 </ul>
             </div>
