--- a/App.Web/Views/Auth/Register.cshtml
+++ b/App.Web/Views/Auth/Register.cshtml
@@ -1,10 +1,10 @@
 ﻿@using App.Dto.UserDtos
-@model RegisterDto
+@model RegisterDtoMvc
+
 @{
     ViewData["Title"] = "Register";
     Layout = "~/Views/Shared/UserLayout.cshtml";
 }
-
 
 <div class="container mt-5">
     <div class="row justify-content-center">
@@ -14,7 +14,8 @@
                     <h3><i class="fas fa-user-plus"></i> Kayıt Ol</h3>
                 </div>
                 <div class="card-body">
-                    <form asp-action="Register" method="post">
+                    <form asp-action="Register" method="post" enctype="multipart/form-data">
+
                         <div class="mb-3">
                             <label asp-for="UserFullName" class="form-label">Ad Soyad</label>
                             <div class="input-group">
@@ -25,12 +26,12 @@
                         </div>
 
                         <div class="mb-3">
-                            <label asp-for="UserProfilePictureUrl" class="form-label">Profil Fotoğrafı </label>
+                            <label asp-for="ImagePath" class="form-label">Profil Fotoğrafı (opsiyonel)</label>
                             <div class="input-group">
                                 <span class="input-group-text"><i class="fas fa-image"></i></span>
-                                <input asp-for="UserProfilePictureUrl" class="form-control" placeholder="Opsiyonel">
+                                <input asp-for="ImagePath" type="file" class="form-control" accept="image/*">
                             </div>
-                            <span asp-validation-for="UserProfilePictureUrl" class="text-danger"></span>
+                            <span asp-validation-for="ImagePath" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
@@ -79,7 +80,9 @@
                         </div>
 
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary"><i class="fas fa-user-plus"></i> Kayıt Ol</button>
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fas fa-user-plus"></i> Kayıt Ol
+                            </button>
                         </div>
                     </form>
 
