--- a/App.Web/Views/Shared/_Footer.cshtml
+++ b/App.Web/Views/Shared/_Footer.cshtml
@@ -29,7 +29,7 @@
                     <p>Yenibağlar Mahallesi</p>
                     <p>Tepebaşı Eskişehir</p>
                     <p class="mt-3"><strong>Telefon:</strong> <span>+90 5312063423</span></p>
-                    <p><strong>Email:</strong> <span>barisyücedag@gmail.com</span></p>
+                    <p><strong>Email:</strong> <span>bar.sukru.fb@hotmail.com</span></p>
                 </div>
                 <div class="social-links d-flex mt-4">
                     <a href=""><i class="bi bi-twitter-x"></i></a>
