--- a/App.Web/Views/Shared/UserLayout.cshtml
+++ b/App.Web/Views/Shared/UserLayout.cshtml
@@ -7,12 +7,12 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Index - Company Bootstrap Template</title>
+    <title>Ata Apartmanı</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
     <!-- Favicons -->
-    <link href="~/Company-1.0.0/assets/img/favicon.png" rel="icon">
+    <link href="~/Company-1.0.0/assets/img/A.png" rel="icon">
     <link href="~/Company-1.0.0/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
